# beeTracker

./: .gitignore  README.md  botsort.yaml  demo.py  external_tracker.py  live_tracker.py  makefile  pyproject.toml  reduced_live_tracker.py  requirements.txt  tracker.py
model_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
output/: bee_summary_statistics.xlsx  bee_telemetry.csv
